# vista_robot

./: README.md  readme.md
marker_detection/: CMakeLists.txt  camera_calibration.yaml  package.xml
marker_detection/launch/: ar_track_camera.launch  ar_track_kinect.launch  aruco_camera.launch  usb_cam_with_calibration.launch
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/launch/: pick_place_demo.launch
pick_and_place/scripts/: moveit_fk_demo.py  moveit_ik_demo.py  pick_place.py  pick_place_10cm.py  test_pick.py
pick_and_place/src/: pick_place.1.cpp  pick_place.2.cpp  pick_place.cpp  test_custom.cpp  test_pick.cpp  test_random.cpp
robotiq_2f_85_gripper_description/: CMakeLists.txt  package.xml
robotiq_2f_85_gripper_description/config/: view_robotiq.rviz
robotiq_2f_85_gripper_description/launch/: view_robotiq.launch
robotiq_2f_85_gripper_description/urdf/: common.gazebo.xacro  robotiq_2f_85.model.xacro  robotiq_2f_85.urdf.xacro
ur3_description/: CMakeLists.txt  package.xml
ur3_description/cfg/: view_robot.rviz
ur3_description/launch/: ur3_upload.launch  view_ur3.launch
vista_robot/: CMakeLists.txt  package.xml
vistar_description/: CMakeLists.txt  package.xml
vistar_description/cfg/: view_vistar.rviz
vistar_description/launch/: view_vistar.launch  vistar_upload.launch
vistar_description/urdf/: ur3_with_robotiq.xacro  vistar_with_camera.xacro  vistar_with_kinect.xacro  vistar_with_topkinect.xacro
vistar_gazebo/: CMakeLists.txt  package.xml
vistar_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+72 files in other folders)
